i915-4.9-4.4 (4.9.41-1) UNRELEASED; urgency=medium

  * New version v4.9.41.
  * Drop radeon module.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 04 Sep 2017 10:49:39 +0300

i915-4.8-4.4 (4.8.17-2) xenial; urgency=medium

  * Revert two unneeded commits from radeon to fix build.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 11 Aug 2017 11:18:29 +0300

i915-4.8-4.4 (4.8.17-1) xenial; urgency=medium

  * Update to v4.8.17.
  * Drop radeon patches included upstream.
  * Add 5917 to modaliases.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 11 Aug 2017 10:38:43 +0300

i915-4.8-4.4 (4.8.5-3) xenial; urgency=medium

  * Add ttm module, adjust build.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 03 Nov 2016 22:31:21 +0200

i915-4.8-4.4 (4.8.5-2) xenial; urgency=medium

  * Add more reverts to silence i915 build warnings.
  * Makefile: Fix a typo preventing build of drm_dp_aux_dev.
  * intel_ips: Use i915_bpo calls like on the main xenial kernel.
  * Makefile: Build i915 using drm/i915/Makefile.
  * Makefile: Build drm using drm/Makefile.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 02 Nov 2016 21:31:10 +0200

i915-4.8-4.4 (4.8.5-1) xenial; urgency=medium

  * Update to v4.8.5 (no drm changes since v4.8)
  * revert-dma-buf-remove-range-based-flush.diff: Fix build warning.
  * Add radeon patches to fix issues with hybrid gfx.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 01 Nov 2016 12:30:35 +0200

i915-4.8-4.4 (4.8~rc5-1) xenial; urgency=medium

  * Update to v4.8-rc5.
  * conf: Use -j4, APL can handle it.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 06 Sep 2016 10:02:19 +0300

i915-4.8-4.4 (4.8~rc3-2) xenial; urgency=medium

  * modaliases: Replace with BXT/APL pciids.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Aug 2016 11:20:53 +0300

i915-4.8-4.4 (4.8~rc3-1) xenial; urgency=medium

  * Initial release for xenial.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Aug 2016 10:41:44 +0300